--- a/resources/css/shopping-cart.css
+++ b/resources/css/shopping-cart.css
@@ -1,152 +1,147 @@
-:root {
-	--darkYellow: #ffe4aa;
-	--softOrage: #f26101;
-	--lightTomato: #ff8f89;
-	--sharpPink: #e894e8;
-	--deepViolet: #bd97ff;
-	--darkBlue: #283657;
-}
-
-@font-face {
-	font-family: "Montserrat", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap");
-}
-
-@font-face {
-	font-family: "Raleway", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap");
-}
-
-@font-face {
-	font-family: "Source Sans Pro", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap");
-}
-
-@font-face {
-	font-family: "Roboto", sans-serif;
-	font-family: "Roboto Slab", serif;
-	src: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap");
-}
-
-@font-face {
-	font-family: "Source Sans Pro", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap");
-}
-
-* {
-	font-family: "Montserrat", sans-serif;
+.form-tittle {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #283657;
+  margin: 0.9rem 0;
 }
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Firefox */
 input[type="number"] {
-	-moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 textarea {
-	resize: none;
+  resize: none !important;
 }
 
-.col {
-	margin: 2px;
-	padding: 0px;
+input.form-control,
+textarea.form-control {
+  padding: 1.5rem !important;
+  border-radius: 0 !important;
 }
 
-.form-tittle {
-	font-family: "Roboto Slab", serif;
-	font-size: 1.2rem;
-	font-weight: bold;
-	color: var(--deepViolet);
+.input-name,
+.input-phone {
+  padding: 0 !important;
+}
 
-	margin: 3px 0px;
+.input-name {
+  padding-right: 0.5rem !important;
+}
+
+.input-phone {
+  padding-left: 0.5rem !important;
+}
+
+@media (max-width: 920px) {
+  .input-name,
+  .input-phone {
+    padding: 0 !important;
+  }
+
+  .input-name {
+    margin-bottom: 1rem;
+  }
+}
+
+.option-method-payment-button {
+  display: flex;
+  height: 3.5rem;
+  align-items: center;
+  background-color: #f8f8f8;
+  margin: 0.5rem 0;
+  padding: 0.5rem 1.5rem;
+}
+
+.logo-method-payment {
+  padding: 0 1rem !important;
 }
 
 .chosen-item-div {
-	height: 70vh;
-	overflow-y: auto;
-	overflow-x: hidden;
-
-	border-style: dashed;
-	border-width: 1px;
-	border-radius: 5px;
-
-	/* box-shadow: 2px 2px 10px grey; */
+  padding: 0.8rem;
+  background-color: #f8f8f8;
+  border-radius: 1rem;
 }
 
 .item-div {
-	background-color: white;
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 5px;
-
-	box-shadow: 2px 2px 10px grey;
+  background-color: white;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0.5rem;
 }
 
 .item-div img {
-	object-fit: cover;
-	overflow: hidden;
+  object-fit: cover;
+  overflow: hidden;
+  height: 8rem;
+  width: auto;
 }
 
 .price {
-	font-family: "Raleway", sans-serif;
-	font-size: medium;
-	text-align: right;
-}
-
-.total-price {
-	font-family: "Raleway", sans-serif;
-	font-size: medium;
-	text-align: right;
-	font-size: large;
-	font-weight: bold;
+  font-size: 1rem;
+  text-align: right;
 }
 
 .item-name {
-	font-size: large;
-	font-weight: bold;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+.total-price-wrapper {
+  font-size: 1.5rem;
+  text-align: right;
+  font-size: large;
+  font-weight: bold;
+  color: #f26101;
 }
 
 .decrease-one,
 .amount,
 .increase-one {
-	display: inline-block;
-	width: 1.5rem;
-	height: 1.5rem;
-	line-height: 1.5rem;
+  display: inline-block !important;
+  width: 1.5rem !important;
+  height: 1.5rem !important;
+  line-height: 1.5rem !important;
 
-	text-align: center;
+  text-align: center !important;
 
-	font-family: "Raleway", sans-serif;
-	font-weight: bold;
-	font-size: 1rem;
+  font-weight: bold !important;
+  font-size: 1rem !important;
 
-	border-style: solid;
-	border-color: var(--softOrage);
-	border-width: 1px;
+  border-style: solid !important;
+  border-color: rgb(120, 120, 120) !important;
+  border-width: 1px !important;
+  border-radius: 0 !important;
+  padding: 0 0 !important;
+}
+
+.amount {
+  width: 2rem !important;
 }
 
 .decrease-one:hover,
 .increase-one:hover {
-	background-color: var(--softOrage);
-	cursor: pointer;
-}
-
-.option {
-	height: 3rem;
-	/* line-height: 3rem; */
+  background-color: rgba(200, 200, 200, 0.2);
+  cursor: pointer;
 }
 
 .confirm-btn {
-	font-family: "Roboto Slab", serif;
-	font-weight: bold;
-	color: white;
+  font-weight: bold !important;
+  color: white !important;
 
-	text-transform: uppercase;
-	background-color: var(--deepViolet);
+  letter-spacing: 1px !important;
+  text-transform: uppercase;
+  background-color: #f26101 !important;
+  border-radius: 0 !important;
+}
+
+.confirm-btn:hover {
+  background-color: black !important;
 }
