--- a/views/shop-cart.hbs
+++ b/views/shop-cart.hbs
@@ -4,7 +4,7 @@
 	{{#with item}} --}}
 	<div class="item-div row p-3 m-2" style="display: none;">
 		<div class="col-md-6 col-sm-12">
-			<img class="w-100 thumbnail" src="" />
+			<img class="thumbnail" src="" />
 		</div>
 
 		<div class="col-md-6 col-sm-12">
@@ -16,7 +16,7 @@
 				<div class="d-flex justify-content-end">
 					<div class="price">0</div> đ
 				</div>
-	{{!-- {{/with}} --}}
+				{{!-- {{/with}} --}}
 				<div class="d-flex justify-content-end mt-1">
 					<div class="decrease-one unselectable">-</div>
 					<div>
