--- a/views/layouts/list-product-layout.hbs
+++ b/views/layouts/list-product-layout.hbs
@@ -4,7 +4,7 @@
 <head>
 	<title>USG</title>
 
-	<link rel="stylesheet" href="./resources/css/list-product.css" />
+	<link rel="stylesheet" href="../resources/css/list-product.css" />
 
 	{{>head-part}}
 </head>
@@ -17,6 +17,8 @@
 	{{>footer-part}}
 
 	{{>bootstrap-part}}
+
+	<script src="../resources/js/ListProduct.js"></script>
 </body>
 
 </html>
